--- a/archives/toutiao-search/2024-03-19.md
+++ b/archives/toutiao-search/2024-03-19.md
@@ -1,53 +1,71 @@
 # 2024-03-19
 
-共 255 条
+共 272 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Mar 19 2024 17:00:53 GMT+0800 (China Standard Time) -->
-1. [恒大被罚41.75亿到底怎么缴](https://so.toutiao.com/search?keyword=恒大被罚41.75亿到底怎么缴)
-1. [普京与另外三位总统候选人红场同框](https://so.toutiao.com/search?keyword=普京与另外三位总统候选人红场同框)
+<!-- 最后更新时间 Tue Mar 19 2024 18:00:53 GMT+0800 (China Standard Time) -->
+1. [王树国卸任西安交通大学校长](https://so.toutiao.com/search?keyword=王树国卸任西安交通大学校长)
+1. [两大学生合买彩票中奖后一人不认账](https://so.toutiao.com/search?keyword=两大学生合买彩票中奖后一人不认账)
 1. [我国经济延续回升向好态势](https://so.toutiao.com/search?keyword=我国经济延续回升向好态势)
-1. [男子被流浪猫绊倒 投喂者赔24万](https://so.toutiao.com/search?keyword=男子被流浪猫绊倒+投喂者赔24万)
-1. [河北初中生被3名同学围殴 警方回应](https://so.toutiao.com/search?keyword=河北初中生被3名同学围殴+警方回应)
+1. [张立群任西安交通大学校长](https://so.toutiao.com/search?keyword=张立群任西安交通大学校长)
+1. [恒大被罚41.75亿到底怎么缴](https://so.toutiao.com/search?keyword=恒大被罚41.75亿到底怎么缴)
 1. [网友洛杉矶偶遇贾玲](https://so.toutiao.com/search?keyword=网友洛杉矶偶遇贾玲)
-1. [“消失”的凯特王妃](https://so.toutiao.com/search?keyword=“消失”的凯特王妃)
-1. [南京的哥辟谣外籍男子乘车不付钱](https://so.toutiao.com/search?keyword=南京的哥辟谣外籍男子乘车不付钱)
-1. [中山医院呼吸内科医生陈雪华逝世](https://so.toutiao.com/search?keyword=中山医院呼吸内科医生陈雪华逝世)
-1. [恒大处罚过轻？专家：终极审判还没来](https://so.toutiao.com/search?keyword=恒大处罚过轻？专家：终极审判还没来)
-1. [浙江台州一汽车高校内冲撞 多人受伤](https://so.toutiao.com/search?keyword=浙江台州一汽车高校内冲撞+多人受伤)
-1. [小米SU7内饰实拍图曝光](https://so.toutiao.com/search?keyword=小米SU7内饰实拍图曝光)
-1. [许家印被限制高消费](https://so.toutiao.com/search?keyword=许家印被限制高消费)
-1. [王楚钦48万奖金个人能分到多少](https://so.toutiao.com/search?keyword=王楚钦48万奖金个人能分到多少)
-1. [爸妈穿军装参加儿子入伍仪式](https://so.toutiao.com/search?keyword=爸妈穿军装参加儿子入伍仪式)
-1. [沈阳一轿车冲入人行道致3死2伤](https://so.toutiao.com/search?keyword=沈阳一轿车冲入人行道致3死2伤)
-1. [小米手机用户都在开什么车](https://so.toutiao.com/search?keyword=小米手机用户都在开什么车)
-1. [主播曝“上门按摩”服务套路](https://so.toutiao.com/search?keyword=主播曝“上门按摩”服务套路)
+1. [两男子盗挖432株野生黑果枸杞获刑](https://so.toutiao.com/search?keyword=两男子盗挖432株野生黑果枸杞获刑)
+1. [普京与另外三位总统候选人红场同框](https://so.toutiao.com/search?keyword=普京与另外三位总统候选人红场同框)
 1. [19岁小伙救下5人后溺亡 多方发声](https://so.toutiao.com/search?keyword=19岁小伙救下5人后溺亡+多方发声)
-1. [房客欠租失踪 房东看着寄卖品发愁](https://so.toutiao.com/search?keyword=房客欠租失踪+房东看着寄卖品发愁)
-1. [学生被害案或成刑事年龄下调追诉首案](https://so.toutiao.com/search?keyword=学生被害案或成刑事年龄下调追诉首案)
-1. [浙江台州高校回应汽车撞伤多名学生](https://so.toutiao.com/search?keyword=浙江台州高校回应汽车撞伤多名学生)
-1. [富人装穷是国产剧普遍现象吗](https://so.toutiao.com/search?keyword=富人装穷是国产剧普遍现象吗)
-1. [倪萍分享减重40斤方法](https://so.toutiao.com/search?keyword=倪萍分享减重40斤方法)
-1. [台媒曝赖清德喊一次造完7艘潜艇](https://so.toutiao.com/search?keyword=台媒曝赖清德喊一次造完7艘潜艇)
-1. [36岁男子确诊细胞瘤决定捐献器官](https://so.toutiao.com/search?keyword=36岁男子确诊细胞瘤决定捐献器官)
-1. [业主投诉小区蛙声此起彼伏](https://so.toutiao.com/search?keyword=业主投诉小区蛙声此起彼伏)
-1. [雷军：小米SU7二排空间比Model S大](https://so.toutiao.com/search?keyword=雷军：小米SU7二排空间比Model+S大)
-1. [日本时隔17年加息 结束负利率时代](https://so.toutiao.com/search?keyword=日本时隔17年加息+结束负利率时代)
-1. [男孩8年未见母亲被告知被遗忘](https://so.toutiao.com/search?keyword=男孩8年未见母亲被告知被遗忘)
+1. [西藏招商引资：投资者子女可当地高考](https://so.toutiao.com/search?keyword=西藏招商引资：投资者子女可当地高考)
+1. [恒大处罚过轻？专家：终极审判还没来](https://so.toutiao.com/search?keyword=恒大处罚过轻？专家：终极审判还没来)
+1. [女生找开封王婆说媒：不用他赚钱](https://so.toutiao.com/search?keyword=女生找开封王婆说媒：不用他赚钱)
+1. [网友造谣女子在天台上偷情坠亡被罚](https://so.toutiao.com/search?keyword=网友造谣女子在天台上偷情坠亡被罚)
+1. [许家印被限制高消费](https://so.toutiao.com/search?keyword=许家印被限制高消费)
+1. [河北初中生被3名同学围殴 警方回应](https://so.toutiao.com/search?keyword=河北初中生被3名同学围殴+警方回应)
+1. [男子被猫抓伤后确诊“猫抓病”](https://so.toutiao.com/search?keyword=男子被猫抓伤后确诊“猫抓病”)
 1. [五问恒大被罚：烂尾楼损失如何挽回](https://so.toutiao.com/search?keyword=五问恒大被罚：烂尾楼损失如何挽回)
+1. [浙江台州一汽车高校内冲撞 多人受伤](https://so.toutiao.com/search?keyword=浙江台州一汽车高校内冲撞+多人受伤)
+1. [“消失”的凯特王妃](https://so.toutiao.com/search?keyword=“消失”的凯特王妃)
+1. [倪萍：婚姻的真谛是改变自己](https://so.toutiao.com/search?keyword=倪萍：婚姻的真谛是改变自己)
+1. [学生被害案或成刑事年龄下调追诉首案](https://so.toutiao.com/search?keyword=学生被害案或成刑事年龄下调追诉首案)
+1. [中国有208万户千万资产家庭](https://so.toutiao.com/search?keyword=中国有208万户千万资产家庭)
+1. [开封王婆谈年轻人恋爱观](https://so.toutiao.com/search?keyword=开封王婆谈年轻人恋爱观)
+1. [男子被流浪猫绊倒 投喂者赔24万](https://so.toutiao.com/search?keyword=男子被流浪猫绊倒+投喂者赔24万)
+1. [小米SU7内饰实拍图曝光](https://so.toutiao.com/search?keyword=小米SU7内饰实拍图曝光)
+1. [中山医院呼吸内科医生陈雪华逝世](https://so.toutiao.com/search?keyword=中山医院呼吸内科医生陈雪华逝世)
+1. [王楚钦48万奖金个人能分到多少](https://so.toutiao.com/search?keyword=王楚钦48万奖金个人能分到多少)
+1. [雷军：小米SU7二排空间比Model S大](https://so.toutiao.com/search?keyword=雷军：小米SU7二排空间比Model+S大)
+1. [爸妈穿军装参加儿子入伍仪式](https://so.toutiao.com/search?keyword=爸妈穿军装参加儿子入伍仪式)
+1. [男子在公园给自己点了个技师按摩](https://so.toutiao.com/search?keyword=男子在公园给自己点了个技师按摩)
+1. [业主投诉小区蛙声此起彼伏](https://so.toutiao.com/search?keyword=业主投诉小区蛙声此起彼伏)
+1. [日本时隔17年加息 结束负利率时代](https://so.toutiao.com/search?keyword=日本时隔17年加息+结束负利率时代)
+1. [湖南发改委原副主任黄志军被逮捕](https://so.toutiao.com/search?keyword=湖南发改委原副主任黄志军被逮捕)
+1. [倪萍分享减重40斤方法](https://so.toutiao.com/search?keyword=倪萍分享减重40斤方法)
+1. [房客欠租失踪 房东看着寄卖品发愁](https://so.toutiao.com/search?keyword=房客欠租失踪+房东看着寄卖品发愁)
+1. [主播曝“上门按摩”服务套路](https://so.toutiao.com/search?keyword=主播曝“上门按摩”服务套路)
+1. [浙江台州高校回应汽车撞伤多名学生](https://so.toutiao.com/search?keyword=浙江台州高校回应汽车撞伤多名学生)
+1. [东部战区空军春季入伍新兵报到](https://so.toutiao.com/search?keyword=东部战区空军春季入伍新兵报到)
+1. [日本央行取消购买ETF](https://so.toutiao.com/search?keyword=日本央行取消购买ETF)
+1. [马斯克公开Grok源代码意味着什么](https://so.toutiao.com/search?keyword=马斯克公开Grok源代码意味着什么)
+1. [德拟对普京不加总统头衔 俄方回应](https://so.toutiao.com/search?keyword=德拟对普京不加总统头衔+俄方回应)
+1. [王毅：中国对新西兰的大门始终敞开](https://so.toutiao.com/search?keyword=王毅：中国对新西兰的大门始终敞开)
+1. [专家分析马克龙为何变成“拿破仑”](https://so.toutiao.com/search?keyword=专家分析马克龙为何变成“拿破仑”)
+1. [36岁男子确诊细胞瘤决定捐献器官](https://so.toutiao.com/search?keyword=36岁男子确诊细胞瘤决定捐献器官)
+1. [315晚会后胖东来又人满为患了](https://so.toutiao.com/search?keyword=315晚会后胖东来又人满为患了)
+1. [男孩8年未见母亲被告知被遗忘](https://so.toutiao.com/search?keyword=男孩8年未见母亲被告知被遗忘)
+1. [小米手机用户都在开什么车](https://so.toutiao.com/search?keyword=小米手机用户都在开什么车)
+1. [加沙女子绝望呼喊“我想死在这里”](https://so.toutiao.com/search?keyword=加沙女子绝望呼喊“我想死在这里”)
+1. [荣耀发布会请成龙代言现场“翻车”](https://so.toutiao.com/search?keyword=荣耀发布会请成龙代言现场“翻车”)
+1. [台媒曝赖清德喊一次造完7艘潜艇](https://so.toutiao.com/search?keyword=台媒曝赖清德喊一次造完7艘潜艇)
+1. [南京的哥辟谣外籍男子乘车不付钱](https://so.toutiao.com/search?keyword=南京的哥辟谣外籍男子乘车不付钱)
+1. [沈阳一轿车冲入人行道致3死2伤](https://so.toutiao.com/search?keyword=沈阳一轿车冲入人行道致3死2伤)
+1. [富人装穷是国产剧普遍现象吗](https://so.toutiao.com/search?keyword=富人装穷是国产剧普遍现象吗)
 1. [21岁百万粉女网红被判刑](https://so.toutiao.com/search?keyword=21岁百万粉女网红被判刑)
 1. [造谣遇害男孩遭活埋微博账号被处置](https://so.toutiao.com/search?keyword=造谣遇害男孩遭活埋微博账号被处置)
 1. [哈马斯谴责以军再次攻入希法医院](https://so.toutiao.com/search?keyword=哈马斯谴责以军再次攻入希法医院)
-1. [两大学生合买彩票中奖后一人不认账](https://so.toutiao.com/search?keyword=两大学生合买彩票中奖后一人不认账)
 1. [马斯克被曝涉间谍 会被中国封杀吗](https://so.toutiao.com/search?keyword=马斯克被曝涉间谍+会被中国封杀吗)
-1. [网友造谣女子在天台上偷情坠亡被罚](https://so.toutiao.com/search?keyword=网友造谣女子在天台上偷情坠亡被罚)
 1. [专家：鸡骨泥用于淀粉肠并不算违规](https://so.toutiao.com/search?keyword=专家：鸡骨泥用于淀粉肠并不算违规)
 1. [六盘水市原水城县县长王尔彬被查](https://so.toutiao.com/search?keyword=六盘水市原水城县县长王尔彬被查)
-1. [马斯克公开Grok源代码意味着什么](https://so.toutiao.com/search?keyword=马斯克公开Grok源代码意味着什么)
 1. [专家：买黄金该出手时就出手](https://so.toutiao.com/search?keyword=专家：买黄金该出手时就出手)
 1. [绿营迟到无法质询 柯建铭态度放缓](https://so.toutiao.com/search?keyword=绿营迟到无法质询+柯建铭态度放缓)
 1. [若两岸开战美军会来吗？邱国正回应](https://so.toutiao.com/search?keyword=若两岸开战美军会来吗？邱国正回应)
-1. [315晚会后胖东来又人满为患了](https://so.toutiao.com/search?keyword=315晚会后胖东来又人满为患了)
 1. [韩国办“民主峰会” 抗议声一片](https://so.toutiao.com/search?keyword=韩国办“民主峰会”+抗议声一片)
 1. [浙江嘉兴一司机驾车连撞多人](https://so.toutiao.com/search?keyword=浙江嘉兴一司机驾车连撞多人)
 1. [哈马斯副军事指挥官生死成谜](https://so.toutiao.com/search?keyword=哈马斯副军事指挥官生死成谜)
@@ -67,7 +85,6 @@
 1. [开封王婆回应爆火](https://so.toutiao.com/search?keyword=开封王婆回应爆火)
 1. [林剑班主任：他出身军人家庭](https://so.toutiao.com/search?keyword=林剑班主任：他出身军人家庭)
 1. [荣耀Magic6保时捷和至臻版开箱](https://so.toutiao.com/search?keyword=荣耀Magic6保时捷和至臻版开箱)
-1. [专家分析马克龙为何变成“拿破仑”](https://so.toutiao.com/search?keyword=专家分析马克龙为何变成“拿破仑”)
 1. [女子把婴儿车推到路上转身就走](https://so.toutiao.com/search?keyword=女子把婴儿车推到路上转身就走)
 1. [媒体：娃哈哈不是“神”](https://so.toutiao.com/search?keyword=媒体：娃哈哈不是“神”)
 1. [日本多地水体和居民血液检出有害物](https://so.toutiao.com/search?keyword=日本多地水体和居民血液检出有害物)
